[metadata]
name = pensando_dss
version = 1.49.2
author = Jeff Silberman
author_email = jeff@pensando.io
description = Python language bindings for Pensando dss
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pensando/pypi
project_urls =
    Bug Tracker = https://github.com/pensando/psmclient/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    nulltype
    urllib3
    requests
    python-dateutil
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .
exclude = test
