[metadata]
name = pensando_ent
version = 0.0.1
author = Jeff Silberman
author_email = jeff@pensando.io
description = Python language bindings for Pensando ent
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pensando/pypi
project_urls =
    Bug Tracker = https://github.com/pensando/pypi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .
exclude = test
